--- a/style.css
+++ b/style.css
@@ -1,92 +1,117 @@
 body {
-    background: #2F2E41;
-    margin: 0;
-    color: #FFFFFF;
-    font-family: 'Open Sans', sans-serif;
+  margin: 0;
+
+  font-family: "Open Sans", sans-serif;
+
+  background: linear-gradient(180deg, rgb(227, 255, 248, 0) 82.08%, rgb(227, 255, 248, 0.38) 100%);
+
+  min-height: 100vh;
 }
 
 .page {
-    width: 1092px;
-    margin: 0 auto;
+  width: 1000px;
+  margin: 0 auto;
+  padding-top: 65px;
 }
 
 nav {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding-top: 68px;
-    font-family: 'JetBrains Mono', monospace;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+
+  margin-bottom: 55px;
 }
 
 ul {
-    list-style-type: none;
-    display: flex;
-    gap: 64px;
-}
-
-ul li a {
-    text-decoration: none;
+  display: flex;
+  gap: 48px;
+  list-style: none;
+  margin: 0;
+  padding: 0;
 }
 
 a {
-    color: #FFFFFF;
+  color: #1f1534;
+  text-decoration: none;
+}
+
+ul li a {
+    opacity: 0.5;
+}
+
+ul li a:hover {
+  font-weight: bold;
+  opacity: 1;
+}
+
+ul,
+h1 {
+  font-family: "Mulish", sans-serif;
 }
 
 main {
-    display: flex;
-    justify-content: space-between;
-    align-items: flex-start;
-    margin-top: 101px;
-    margin-bottom: 157px;
-}
-
-section {
-    
-    text-align: center;
-}
-
-nav, main h1, footer  {
-    font-family: 'JetBrains Mono', monospace;
-
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
 }
 
 h1 {
-    font-size: 36px;
-    line-height: 40px;
-    margin-bottom: 59px;
+  font-size: 49px;
+  line-height: 56px;
+  color: #1f1534;
+
+  font-weight: normal;
+
+  width: 490px;
 }
 
-span {
-    color: #00BFA6;
-    font-weight: bold;
+h1 span {
+  color: #89c5cc;
+  font-weight: bold;
 }
 
-section p {
-    font-size: 16px;
-    line-height: 28px;
-    color: #C2C2C2;
-    width: 604px;
+p {
+  font-size: 14px;
+  line-height: 28px;
+  color: #7d7987;
+
+  margin: 40px 0;
 }
 
-section p.a {
-    color: white; text-shadow: black 0.1em 0.1em 0.2em;
-}
+button {
+  color: white;
+  text-transform: uppercase;
+  font-family: "Open Sans", sans-serif;
 
-#linha {
-    width: 568px;
-    border: 0;
-	border-top: 1px solid #00BFA6;
-    margin: 0 auto 27px;
+  background: #69B99D;
+  border: 0;
+  padding: 14px 32px 15px;
+
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 10px;
+
+  border-radius: 4px;
+
+  cursor: pointer;
 }
 
 footer {
-    text-align: center;
-    font-size: 14px;
-    line-height: 28px;
+  font-size: 14px;
+  line-height: 28px;
+
+  text-align: center;
+
+  margin-top: 80px;
 }
 
-#cadeado {
+footer a {
+  font-weight: bold;
+}
+
+#balls {
     position: fixed;
-    bottom: 23px;
-    left: 16px;
+    bottom: 0;
+    right: 0;
 }
